add ### 混世魔王们 ( Mischievous Little Devils )

--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.png"
   bio              : "Open source enthusiast, hardware-minded software engineer."
   location         : "Shenzhen, China"
-  employer         :  "Huawei 2012 LAB"
+  employer         : "Huawei 2012 LAB"
   pubmed           :
   googlescholar    :
   email            : "guoqiang.qi1@gmail.com"
@@ -106,7 +106,7 @@ author:
   orcid            :
   pinterest        :
   soundcloud       :
-  stackoverflow    : "http://stackoverflow.com/users/10628636/guoqiangqi"
+  stackoverflow    : "10628636/guoqiangqi"
   steam            :
   tumblr           :
   twitter          : ""
