change personal messagess.

--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.png"
   bio              : "Open source enthusiast, hardware-minded software engineer."
   location         : "Shenzhen, China"
-  employer         : "Huawei 2012 LAB"
+  employer         :
   pubmed           :
   googlescholar    :
   email            : "guoqiang.qi1@gmail.com"
